fix layout bug

--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -3,7 +3,6 @@
     margin: 0 auto;
 
     @include respond(big-desktop) {
-        min-width: $grid-width;
         max-width: none;
         margin-left: 5%;
         margin-right: 5%;
